# hillel_django_project

./: pyproject.toml
api/: forms.py  urls.py
api/admin/: __init__.py  company.py  course.py  department.py  employee.py  position.py  student.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  company.py  course.py  employee.py  position.py  student.py
api/views/: homework_querysets.py
common/: enums.py
company_management/: asgi.py  settings.py  urls.py  wsgi.py
